[Prasad] Refactor : Added JWT Authentication

--- a/FundooWebAPI/appsettings.json
+++ b/FundooWebAPI/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "UserDBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Fundoo;Integrated Security=True" }
+  "JWT": {
+    "ValidAudience": "http://localhost:5288",
+    "ValidIssuer": "http://localhost:5288"
+  }
 }
