[Prasad] Added : Added the Reset Password and Email

--- a/FundooWebAPI/appsettings.json
+++ b/FundooWebAPI/appsettings.json
@@ -9,5 +9,11 @@
   "JWT": {
     "ValidAudience": "http://localhost:5288",
     "ValidIssuer": "http://localhost:5288"
-  }
+  },
+  "EmailSettings": {
+      "SmtpServer": "smtp.gmail.com",
+      "SmtpPort": 587,
+      "SenderName": "Fun-do",
+      "SenderEmail": "proiresadah12@gmail.com"
+    }
 }
