--- a/FundooWebAPI/appsettings.json
+++ b/FundooWebAPI/appsettings.json
@@ -11,8 +11,9 @@
     "ValidIssuer": "http://localhost:5288"
   },
   "EmailSettings": {
-      "SmtpServer": "smtp.gmail.com",
-      "SmtpPort": 587,
-      "SenderEmail": "proiresadah12@gmail.com"
-    }
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "proiresadah12@gmail.com"
+  },
+  "RedisURL": "localhost:6379"
 }
