--- a/FundooWebAPI/appsettings.json
+++ b/FundooWebAPI/appsettings.json
@@ -15,5 +15,9 @@
     "SmtpPort": 587,
     "SenderEmail": "proiresadah12@gmail.com"
   },
-  "RedisURL": "localhost:6379"
-}
+  "RedisURL": "localhost:6379",
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "QueueName": "EmailQueue"
+  }
+  }
